filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:s6
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /srv
          name: shared-media
        - mountPath: /database
          name: config
      volumes:
      - name: shared-media
        persistentVolumeClaim:
          claimName: filebrowser-shared-media
      - name: config
        persistentVolumeClaim:
          claimName: filebrowser-config
