filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
